--- a/Css/dash.css
+++ b/Css/dash.css
@@ -1,3 +1,9 @@
+* {
+    font-family: 'B Nazanin';
+    font-size: 18px;
+    font-weight: bold;
+}
+
 @font-face {
     font-family: 'BNazanin';
     src: url('path-to-font/BNazanin.woff2') format('woff2');
@@ -20,7 +26,10 @@ body {
     text-decoration: none;
     padding: 15px;
     display: block;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
+
 
 .sidebar a:hover {
     background-color: DodgerBlue;
