--- a/Css/dash.css
+++ b/Css/dash.css
@@ -16,7 +16,7 @@ body {
 
 .sidebar {
     height: 100vh;
-    background-color: DodgerBlue;
+    background-color: #0E2954;
     color: white;
     padding-top: 20px;
 }
@@ -53,6 +53,7 @@ body {
     margin: 0 auto;
     width: 200px;
     height: auto;
+    
 }
 
 /* استایل فوتر */
