--- a/Css/Employee_Report.css
+++ b/Css/Employee_Report.css
@@ -44,7 +44,7 @@ label {
 }
 
 input[type="text"],
-input[type="number"] {
+input[type="number"],input[type="password"],textarea, select {
     width: 100%;
     padding: 10px;
     font-size: 16px;
@@ -73,4 +73,16 @@ button {
 
 button:hover {
     background-color: rgb(19, 97, 174);
+
+}
+textarea{
+    border-radius:5px;
+    width: 275px;
+    padding:0.2px 13px;
+}
+select{
+    width:280px;
+    height: 46px;
+    border-radius:5px;
+    outline: none;
 }
