--- a/Css/Employee_Report.css
+++ b/Css/Employee_Report.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'B Nazanin';
+    font-family: 'B Nazanin', sans-serif; /* افزودن نوع قلم جانبی */
     background-color: #f5f5f5;
     margin: 0;
     padding: 0;
@@ -34,6 +34,11 @@ form {
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
+    
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 10px; /* فاصله کمتر */
+    
 }
 
 label {
@@ -44,7 +49,8 @@ label {
 }
 
 input[type="text"],
-input[type="number"] {
+input[type="number"],
+input[type="password"] {
     width: 100%;
     padding: 10px;
     font-size: 16px;
@@ -54,7 +60,7 @@ input[type="number"] {
 }
 
 .form-col {
-    width: 30%;
+    width: 30%; /* نسبت عرض ستون‌ها */
 }
 
 button {
@@ -66,27 +72,21 @@ button {
     font-size: 20px;
     cursor: pointer;
     transition: background-color 0.3s;
-    font-family: 'B Nazanin';
+    font-family: 'B Nazanin', sans-serif;
     font-weight: bold;
-    width: 250px;
+    width: 100%; /* تغییر عرض دکمه به 100% */
+    margin: 0 auto; /* مرکز کردن دکمه */
 }
 
 button:hover {
     background-color: rgb(19, 97, 174);
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
->>>>>>> 43269a35badf523902af525aacd1dec7bf7551d8
 }
 
 select {
-    width: 280px;
+    width: 100%; /* تغییر عرض انتخاب به 100% */
     height: 46px;
     border-radius: 5px;
-    outline: none;
-<<<<<<< HEAD
-=======
-=======
->>>>>>> 611f05667c9aa7d880a27fda04f50c9ef6ebfdcd
->>>>>>> 43269a35badf523902af525aacd1dec7bf7551d8
+    border: 1px solid #ccc;
+    padding: 10px; /* اضافه کردن padding برای زیباتر شدن */
+    box-sizing: border-box; /* تنظیم box model */
 }
