--- a/Css/Employee_Report.css
+++ b/Css/Employee_Report.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'B Nazanin', sans-serif; /* افزودن نوع قلم جانبی */
+    font-family: 'B Nazanin';
     background-color: #f5f5f5;
     margin: 0;
     padding: 0;
@@ -34,11 +34,6 @@ form {
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
-    
-        display: flex;
-        justify-content: space-between;
-        margin-bottom: 10px; /* فاصله کمتر */
-    
 }
 
 label {
@@ -49,12 +44,7 @@ label {
 }
 
 input[type="text"],
-<<<<<<< HEAD
-input[type="number"],
-input[type="password"] {
-=======
-input[type="number"],input[type="password"],textarea, select {
->>>>>>> ffe61e3aa5fa4ec7f803a48a0ebfa718b0a1c8b0
+input[type="number"] {
     width: 100%;
     padding: 10px;
     font-size: 16px;
@@ -64,7 +54,7 @@ input[type="number"],input[type="password"],textarea, select {
 }
 
 .form-col {
-    width: 30%; /* نسبت عرض ستون‌ها */
+    width: 30%;
 }
 
 button {
@@ -76,53 +66,18 @@ button {
     font-size: 20px;
     cursor: pointer;
     transition: background-color 0.3s;
-    font-family: 'B Nazanin', sans-serif;
+    font-family: 'B Nazanin';
     font-weight: bold;
-    width: 100%; /* تغییر عرض دکمه به 100% */
-    margin: 0 auto; /* مرکز کردن دکمه */
+    width: 250px;
 }
 
 button:hover {
     background-color: rgb(19, 97, 174);
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
-
-}
-textarea{
-    border-radius:5px;
-    width: 275px;
-    padding:0.2px 13px;
-}
-select{
-    width:280px;
-    height: 46px;
-    border-radius:5px;
-    outline: none;
-=======
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
->>>>>>> 43269a35badf523902af525aacd1dec7bf7551d8
->>>>>>> ffe61e3aa5fa4ec7f803a48a0ebfa718b0a1c8b0
 }
 
 select {
-    width: 100%; /* تغییر عرض انتخاب به 100% */
+    width: 280px;
     height: 46px;
     border-radius: 5px;
-<<<<<<< HEAD
-    border: 1px solid #ccc;
-    padding: 10px; /* اضافه کردن padding برای زیباتر شدن */
-    box-sizing: border-box; /* تنظیم box model */
-}
-=======
     outline: none;
-<<<<<<< HEAD
-=======
-=======
->>>>>>> 611f05667c9aa7d880a27fda04f50c9ef6ebfdcd
->>>>>>> 43269a35badf523902af525aacd1dec7bf7551d8
->>>>>>> c1d04958d888712f8b9653deeef6666639e81eda
 }
->>>>>>> ffe61e3aa5fa4ec7f803a48a0ebfa718b0a1c8b0
